# march-madness-bracket-simulator

./: .gitignore  README.md  andrea.md  andrea.txt  projectnotes.md  pyproject.toml
app/: streamlit_app.py
data/processed/simulation_cache/: champion_odds.csv  consensus_bracket.json  final_four_odds.csv  regional_odds_east.csv  regional_odds_midwest.csv  regional_odds_south.csv  regional_odds_west.csv
data/raw/: 2026_bracket_results.csv  bracket_2026.csv
notebooks/: exploration.ipynb
scripts/: evaluate_baseline_2026.py  export_simulation_outputs.py
src/march_madness_bracket_simulator/: __init__.py  analysis.py  data_loader.py  evaluation.py  feature_engineering.py  simulator.py
tests/: test_simulator.py
